modules/module_12/manifest/bff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-svc
  namespace: cloudnative
spec:
  selector:
    app: bff-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
