modules/module_12/manifest/bff/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bff-svc
  namespace: cloudnative
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - cloudnative.io
      port:
        name:  bff-svc
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cloudnative-credential
